src/objects/FolioPolizaUpd__c.object
<CustomObject>
    <description>Objeto que contiene los folios de cotización para act..</description>
    <fields>
        <fullName>Actualizado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Actualizado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ConMesesSinIntereses__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CON MESES SIN INTERESES</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Condescuento__c</fullName>
        <formula>IF(Status__c = TRUE, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Con descuento</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Correo_Renovacion__c</fullName>
        <label>Correo Renovacion</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No enviado</fullName>
                    <default>true</default>
                    <label>No enviado</label>
                </value>
                <value>
                    <fullName>Enviado</fullName>
                </value>
                <value>
                    <fullName>Abierto</fullName>
                </value>
                <value>
                    <fullName>No abierto</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Detalledescuentook__c</fullName>
        <label>Detalle de descuento</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eliminado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Eliminado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EnviadaRenovacion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enviada a Renovación</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EnviadoMC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enviado a MC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Estado__c</fullName>
        <label>Estado</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EstatusClipert__c</fullName>
        <label>Estatus Clipert</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FolioCotizacion__c</fullName>
        <externalId>true</externalId>
        <label>Folio cotización</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Importe__c</fullName>
        <label>Importe</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Inicio_Vigencia__c</fullName>
        <label>Inicio Vigencia</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inicio_vigencia_anio__c</fullName>
        <formula>TEXT(YEAR( Inicio_Vigencia__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inicio vigencia anio</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inicio_vigencia_dia__c</fullName>
        <formula>DAY( Inicio_Vigencia__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inicio vigencia dia</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inicio_vigencia_mes__c</fullName>
        <formula>CASE( MONTH(Inicio_Vigencia__c),
1, &quot;Enero&quot;,
2, &quot;Febrero&quot;,
3, &quot;Marzo&quot;,
4, &quot;Abril&quot;,
5, &quot;Mayo&quot;,
6, &quot;Junio&quot;,
7, &quot;Julio&quot;,
8, &quot;Agosto&quot;,
9, &quot;Septiembre&quot;,
10, &quot;Octubre&quot;,
11, &quot;Noviembre&quot;,
12, &quot;Marzo&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inicio vigencia mes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marca__c</fullName>
        <label>Marca</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NoPoliza__c</fullName>
        <label>No Póliza</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pago__c</fullName>
        <label>Pago</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan__c</fullName>
        <label>Plan</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PolizaRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Póliza</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Renovaciones2</relationshipLabel>
        <relationshipName>Renovaciones2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proceso__c</fullName>
        <label>Proceso</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>RENOVACION</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RenovacionID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renovacion ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SinMesesSinIntereses__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SIN MESES SIN INTERESES</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sindescuento__c</fullName>
        <formula>IF(Status__c = false, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sin descuento</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Descuento</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Submarca__c</fullName>
        <label>Submarca</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>anio__c</fullName>
        <label>anio</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>caractteri__c</fullName>
        <label>caractteri</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>cdescri126__c</fullName>
        <label>cdescri126</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cdescri128__c</fullName>
        <label>cdescri128</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cdescri130__c</fullName>
        <label>cdescri130</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cimport127__c</fullName>
        <label>cimport127_a</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cimport127_b__c</fullName>
        <label>cimport127_b</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cimport129__c</fullName>
        <label>cimport129</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cimport131__c</fullName>
        <label>cimport131</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cmodelo29__c</fullName>
        <label>cmodelo29</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dia__c</fullName>
        <label>dia</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>email__c</fullName>
        <label>email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>mes__c</fullName>
        <label>mes</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nombre__c</fullName>
        <label>nombre</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>url1__c</fullName>
        <label>url1</label>
        <type>Url</type>
    </fields>
    <label>Folio-Poliza-Upd</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>FolioCotizacion__c</columns>
        <columns>Proceso__c</columns>
        <columns>PolizaRef__c</columns>
        <columns>NoPoliza__c</columns>
        <columns>EstatusClipert__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>PolizaRef__c</field>
            <operation>equals</operation>
        </filters>
        <label>hoy vacios</label>
    </listViews>
    <listViews>
        <fullName>Ayer</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Ayer</label>
        <sharedTo>
            <group>Administradores</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Todos</fullName>
        <columns>NAME</columns>
        <columns>NoPoliza__c</columns>
        <columns>Proceso__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>nombre__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <nameField>
        <displayFormat>FP-{000000000}</displayFormat>
        <label>Numero de Folio Poliza</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Folio-Poliza-Upd</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>